--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -10,6 +10,8 @@
   		<meta property="og:url" content="{{ site.url }}">
   		<meta property="og:title" content="{{ site.title }}">
   		<meta property="og:description" content="CodicePlastico è un grande piccolo team di software engineer">
+  		<meta name="description" content="We are a software house of superheroes">
+  		<meta name="keywords" content="software, consulenza, sviluppo, formazione">
   		<meta property="og:image" content="{{ site.url }}/images/facebook.jpg">
 	</head>
 	<body>
