disabled google analytics

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -121,6 +121,7 @@
 		<script src="{{ root_url }}/javascripts/main.js"></script>
 		<!-- endbuild -->
 		<script type="text/javascript">
+			window['ga-disable-UA-149173-1'] = true;
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-149173-1']);
 		  _gaq.push(['_trackPageview']);
